# taocp_in_c

./: BUILD  LICENSE  Makefile.am  README  configure.ac
1_3_2/: M.c  M.h  M_literal.c  Makefile.am  P.c  P.h  check_M.c  check_P.c  check_ex10.c  check_ex9.c  configure.ac  ex10.h  ex10sol1.c  ex10sol2.c  ex3.c  ex8.c  ex9.c  ex9.h  harness_P.c
mix/: Makefile.am  configure.ac  mix.c  mix.h
